# tad-dftd4

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CONTRIBUTING.md  LICENSE.md  README.md  README.rst  environment.yaml  pyproject.toml  setup.cfg  setup.py  tox-old.ini  tox.ini
.github/workflows/: codeql.yaml  macos-arm.yaml  macos-x86.yaml  macos.yaml  python.yaml  python.yml  release.yaml  release.yml  test.yml  ubuntu.yaml  windows.yaml
doc/: conf.py  index.rst  installation.rst
doc/modules/: _typing.rst  charges.rst  constants.rst  disp.rst  index.rst  model.rst  params.rst  utils.rst
doc/modules/damping/: rational.rst
doc/modules/data/: en.rst  hardness.rst  r4r2.rst  radii.rst  zeff.rst
doc/modules/ncoord/: d4.rst
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  requirements.txt
docs/modules/: cutoff.rst  index.rst
docs/modules/damping/: index.rst
docs/modules/data/: en.rst  index.rst  r4r2.rst  radii.rst  wfpair.rst  zeff.rst
docs/modules/ncoord/: count.rst  eeq.rst  index.rst
docs/modules/typing/: builtin.rst  index.rst
docs/source/: conf.py  examples.rst  index.rst
docs/source/modules/: defaults.rst  index.rst
docs/source/modules/damping/: atm.rst  functions.rst  index.rst  parameters.rst
docs/source/modules/data/: radii.rst
docs/source/modules/dispersion/: base.rst  d3.rst  d4.rst  index.rst  threebody.rst  twobody.rst
docs/source/modules/model/: base.rst  d4.rst  d4s.rst  index.rst
docs/source/modules/typing/: pytorch.rst
examples/: batch.py  d4s.py  devel.py  forces.py  run.py  single.py
src/tad_dftd4/: __init__.py  __main__.py  __version__.py  _typing.py  charges.py  cli.py  constants.py  cutoff.py  defaults.py  disp.py  model.py  params.npz  params.py  typing.py  util.py  utils.py
src/tad_dftd4/damping/: __init__.py  atm.py  exact.py  functions.py  rational.py  zero.py
src/tad_dftd4/damping/parameters/: __init__.py  base.py  d4.toml  loader.py  parameters.toml  read.py
src/tad_dftd4/data/: __init__.py  en.py  hardness.py  r4r2.py  radii.py  tanh.py  wfpair.py  zeff.py
src/tad_dftd4/dispersion/: __init__.py  base.py  d3.py  d4.py  threebody.py  twobody.py
src/tad_dftd4/model/: __init__.py  alpha.py  base.py  d3.py  d4.py  d4s.py  d5.py  typing.py  utils.py
src/tad_dftd4/ncoord/: __init__.py  count.py  d4.py  eeq.py  ncoord.py
src/tad_dftd4/reference/: __init__.py  charge_eeq.py  charge_gfn2.py  params.py
src/tad_dftd4/reference/d4/: __init__.py  charge_eeq.py  charge_gfn2.py  params.py
src/tad_dftd4/typing/: __init__.py  builtin.py  pytorch.py
src/tad_dftd4/utils/: __init__.py  distance.py  grad.py  misc.py
test/: conftest.py  molecules.py  util.py  utils.py
test/test_charge/: samples.py  test_charges.py  test_eeq.py  test_general.py  test_grad.py
test/test_cutoff/: test_general.py  test_types.py
test/test_d4/: __init__.py  samples.py  test_atm.py  test_class.py  test_full.py  test_general.py  test_properties.py  test_twobody.py
test/test_disp/: samples.py  test_atm.py  test_damping.py  test_full.py  test_general.py  test_grad.py  test_properties.py  test_term.py  test_twobody.py  test_variants.py
test/test_grad/: samples_grad.py  samples_hessian.py  test_hessian.py  test_nan.py  test_param.py  test_pos.py
test/test_model/: __init__.py  samples.py  test_c6.py  test_d4model.py  test_d4smodel.py  test_general.py  test_model.py  test_models.py  test_params.py  test_weights.py
test/test_ncoord/: samples.py  test_cn_d4.py  test_cn_eeq.py  test_general.py  test_grad.py  test_ncoord.py
test/test_param/: test_fail.py  test_read.py
test/test_utils/: __init__.py  test_cdist.py  test_pack.py  test_real.py
tests/: conftest.py  molecules.py  utils.py
tests/test_charge/: samples.py  test_general.py  test_grad.py
tests/test_cutoff/: test_general.py  test_types.py
tests/test_disp/: samples.py  test_atm.py  test_full.py  test_twobody.py
tests/test_grad/: __init__.py  samples_grad.py  samples_hessian.py  test_hessian.py  test_nan.py  test_param.py  test_pos.py
tests/test_model/: test_c6.py  test_model.py  test_params.py  test_weights.py
tests/test_ncoord/: samples.py  test_cn_d4.py  test_grad.py
tests/test_utils/: test_pack.py  test_real.py
