[metadata]
name = tad_dftd4
version = attr: tad_dftd4.__version__.__version__
description = Torch autodiff DFT-D4 implementation
long_description = file: README.rst
long_description_content_type = text/x-rst
author = "Marvin Friede"
license = LGPL-3.0
license_files =
    COPYING
    COPYING.LESSER
classifiers =
    Framework :: Pytest
    License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)
    Natural Language :: English
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Scientific/Engineering
    Typing :: Typed

[options]
packages = find:
install_requires =
    numpy
    torch
python_requires = >=3.8
package_dir =
    =src

[options.packages.find]
where = src

[options.extras_require]
dev =
    black
    covdefaults
    coverage
    pre-commit
    pylint
    pytest
    tox

[options.package_data]
squarer =
    py.typed
