[metadata]
name = tad_dftd4
version = attr: tad_dftd4.__version__.__version__
description = Torch autodiff DFT-D4 implementation
long_description = file: README.md
long_description_content_type = text/markdown
author = "Marvin Friede"
license = Apache-2.0
license_files = LICENSE
classifiers =
    Framework :: Pytest
    License :: OSI Approved :: Apache Software License
    Natural Language :: English
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Scientific/Engineering
    Typing :: Typed

[options]
packages = find:
install_requires =
    numpy<2
    tad-mctc
    tad-multicharge
    torch>=1.11
    torch>=1.11,<2.4
    typing-extensions
python_requires = >=3.8, <3.13
package_dir =
    =src

[options.packages.find]
where = src

[options.extras_require]
dev =
    black
    covdefaults
    mypy
    pre-commit
    pylint
    pytest
    pytest-cov
    pytest-random-order
    pytest-xdist
    tox
tox =
    covdefaults
    pytest
    pytest-cov
    pytest-random-order
    pytest-xdist

[options.package_data]
tad_dftd4 =
    py.typed
    **/*.npy
    **/*.npz
